apps/arena/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arena
  namespace: managoat-demos
  labels:
    app: arena
spec:
  type: ClusterIP
  selector:
    app: arena
  ports:
    - port: 80
      targetPort: 8080
